# exotools

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/: codecov.yml
.github/workflows/: lint.yml  publish-to-pypi.yml  tests.yml  version-check.yml
benchmarks/: benchmark_io.py
docs/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  requirements.txt  usage.rst
exotools/: __init__.py  candidate_exoplanets.py  constants.py  known_exoplanets.py  lightcurves.py  tess.py
exotools/datasets/: __init__.py  _exoplanet_dataset_reducer.py  base_dataset.py  candidate_exoplanets.py  gaia_parameters.py  known_exoplanets.py  lightcurves.py  planetary_composite.py  planetary_systems.py  tess.py  tic_catalog.py  tic_observations.py
exotools/db/: __init__.py  base_db.py  candidate_db.py  exo_db.py  exo_par_db.py  gaia_db.py  lightcurve_db.py  lightcurve_plus.py  ps_db.py  starsystem_db.py  tess_meta_db.py  tic_db.py  toi_db.py  urls_db.py
exotools/db/star_system/: __init__.py  star_system.py  uncertain_data.py
exotools/downloaders/: __init__.py  _utils.py  base_downloader.py  candidate_exoplanets_downloader.py  dataset_downloader.py  exoplanets_downloader.py  gaia_downloader.py  lightcurve_downloader.py  ps_comppar_downloader.py  ps_downloader.py  tap_service.py  tess_catalog_downloader.py  tess_observations_downloader.py  toi_exoplanets_downloader.py
exotools/io/: __init__.py  base_storage.py  base_storage_wrapper.py  fs_storage.py  hdf5_storage.py  memory_storage.py
exotools/utils/: __init__.py  array_utils.py  download.py  exoplanet_dataset_reducer.py  io.py  logging.py  masked_operations.py  qtable_utils.py  secrets.py  unit_mapper.py  warning_utils.py
scripts/: common.sh  publish_to_pypi.sh  publish_to_testpypi.sh  setup_pre_commit.sh
src/exotools/: __init__.py  candidate_exoplanets.py  known_exoplanets.py
src/exotools/_downloaders/: dataset_downloader.py  exoplanets_downloader.py  gaia_downloader.py  tap_service.py  tess_catalog_downloader.py  tess_observations_downloader.py  toi_exoplanets_downloader.py
src/exotools/_loaders/: exo_db.py  lightcurve_plus.py  loaders.py  tic_db.py
src/exotools/db/: gaia_db.py  lightcurve_db.py  lightcurve_loader.py  loaders.py  starsystem_db.py  toi_db.py  urls_db.py
src/exotools/utils/: exoplanet_dataset_reducer.py  observations_fix.py
tests/: conftest.py  paths.py  test.ipynb  test_datasets.py  test_fs_storage.py  test_fs_wrapper.py  test_hdf5_storage.py  test_hdf5_wrapper.py  test_lightcurve_plus.py  test_mem_storage.py  test_utils.py  tlest.py  utils.py
tests/assets/: generate_test_data.py  planet_hostnames.txt
tests/assets/qtables/: candidate_exoplanets.ecsv  gaia.ecsv  gaia_known_exoplanets.ecsv  gaia_known_exoplanets_header.json  gaia_ps.ecsv  known_exoplanets.ecsv  known_exoplanets_header.json  known_exoplanets_reduced.ecsv  known_exoplanets_reduced_header.json  ps.ecsv  ps_composite.ecsv  ps_composite_header.json  ps_header.json  (+10 more)
tests/storage_tests/: test_fs_storage.py
tests/test_assets/: generate_test_data.py
tests/test_db/: test_base_db.py  test_candidate_db.py  test_exoplanet_db.py  test_gaia_db.py  test_lightcurve_db.py  test_starsystem_db.py  test_tess_db.py  test_tic_db.py
tests/test_downloaders/: test_candidate_downloader.py  test_exoplanes_downloader.py  test_gaia_downloader.py  test_lightcurve_downloader.py  test_ps_comppar_downloader.py  test_ps_downloader.py  test_tess_catalog_downloader.py  test_tess_observations_downloader.py
tests/test_storage/: test_fs_storage.py  test_hdf5_storage.py  test_mem_storage.py
tests/test_utils/: test_comparison.py  test_masked_operations.py  test_secrets.py  test_warning_utils.py
tests/utils/: comparison.py  table_comparison.py
(+79 files in other folders)
