[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exotools"
version = "0.1.0"
description = "Tools for working with exoplanet data"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Christian", email = "your.email@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyvo>=1.4",
    "astropy>=5.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/sechlol/exotools"
"Bug Tracker" = "https://github.com/sechlol/exotools/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
