[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exotools"
version = "0.1.2"
description = "Tools for working with exoplanet data"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Christian", email = "astro.sech@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "pandas",
    "pandas[performance]",
    "tables",
    "pyarrow==18.1.0",
    "h5py",
    "pydantic",
    "oktopus",
    "lightkurve",
    "astropy",
    "astroquery",
    "casjobs",
    "tqdm",
    "tabulate",
    "pyvo",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.urls]
"Homepage" = "https://github.com/sechlol/exotools"
"Bug Tracker" = "https://github.com/sechlol/exotools/issues"
"Documentation" = "https://github.com/sechlol/exotools"

[tool.setuptools]
packages = ["exotools"]

[tool.setuptools.package-data]
exotools = ["py.typed"]
