[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exotools"
version = "0.0.5"
description = "Tools for working with exoplanet data"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "Christian Cardin", email = "astro.sech@gmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "pandas[performance]",
    "pyarrow==18.1.0",
    "tables",
    "tabulate",
    "h5py",
    "pydantic",
    "oktopus",
    "lightkurve",
    "astropy[recommended]",
    "astroquery",
    "casjobs",
    "tqdm",
    "pyvo",
    "tomli",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "python-dotenv",
    "ruff",
    "sphinx",
    "sphinx_rtd_theme",
    "myst-parser",
]

[project.urls]
"Homepage" = "https://github.com/sechlol/exotools"
"Bug Tracker" = "https://github.com/sechlol/exotools/issues"
"Documentation" = "https://github.com/sechlol/exotools"

[tool.setuptools]
packages = ["exotools"]

[tool.setuptools.package-data]
exotools = ["py.typed"]
